# py-geocoder-studitemps

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
geocoder_studitemps/: __init__.py  config.py  geocoder.py
tests/: address_validation_test.py
