[tool.poetry]
name = "geocoder-studitemps"
version = "1.3.0"
description = "A Geocoder for Studitemps"
authors = ["John Faucett <john.faucett@studitemps.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pydantic = "^1.10.4"
google-i18n-address = "^2.5.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
